--- a/src/components/sections/ProfessionalProjects.astro
+++ b/src/components/sections/ProfessionalProjects.astro
@@ -20,6 +20,7 @@ import ProjectCard from "../ui/ProjectCard.astro";
             liveUrl="https://summergo.net/"
             category="Corporativo"
             year="2025"
+            isIndividual={true}
          />
          <ProjectCard
             title="Sistema de Parque UMSS"
@@ -29,6 +30,7 @@ import ProjectCard from "../ui/ProjectCard.astro";
             codeUrl="https://github.com/Wimpi18/BackendProyectoParqueo"
             category="Gestión"
             year="2025"
+            isTeam={true}
          />
 
          <ProjectCard
@@ -40,6 +42,7 @@ import ProjectCard from "../ui/ProjectCard.astro";
             liveUrl="https://simutechacademy.netlify.app/"
             category="Educación"
             year="2024"
+            isTeam={true}
          />
 
          <ProjectCard
@@ -50,6 +53,7 @@ import ProjectCard from "../ui/ProjectCard.astro";
             codeUrl="https://github.com/DigitalCocha/Frontend-Evaluacion_de_Proyectos"
             category="Gestión"
             year="2024"
+            isTeam={true}
          />
 
          <ProjectCard
@@ -60,6 +64,7 @@ import ProjectCard from "../ui/ProjectCard.astro";
             codeUrl="https://github.com/CodeMasterChefs/Frontend-Ruta-Programador"
             category="Educación"
             year="2023"
+            isTeam={true}
          />
       </div>
    </div>
