--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import Hero from "../components/sections/Hero.astro";
 import About from "../components/sections/About.astro";
 import TechCarousel from "../components/sections/TechCarousel.astro";
-import FrontendProjects from "../components/sections/FrontendProjects.astro";
+import ProfessionalProjects from "../components/sections/ProfessionalProjects.astro";
 import PersonalProjects from "../components/sections/PersonalProjects.astro";
 import ImmersiveExperiences from "../components/sections/ImmersiveExperiences.astro";
 import FrontendContributions from "../components/sections/FrontendContributions.astro";
@@ -26,7 +26,7 @@ import Contact from "../components/sections/Contact.astro";
    <ProfessionalExperience />
 
    <!-- Proyectos Frontend Profesionales -->
-   <FrontendProjects />
+   <ProfessionalProjects />
 
    <!-- Proyectos Personales Frontend -->
    <PersonalProjects />
