data: update community and contributions

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,12 +6,11 @@ import TechCarousel from "../components/sections/TechCarousel.astro";
 import ProfessionalProjects from "../components/sections/ProfessionalProjects.astro";
 import PersonalProjects from "../components/sections/PersonalProjects.astro";
 import ImmersiveExperiences from "../components/sections/ImmersiveExperiences.astro";
-import FrontendContributions from "../components/sections/FrontendContributions.astro";
+import Community_Contributions from "../components/sections/Community_Contributions.astro";
 import ProfessionalExperience from "../components/sections/ProfessionalExperience.astro";
 import ToolsCarousel from "../components/sections/ToolsCarousel.astro";
 import ProjectManagement from "../components/sections/ProjectManagement.astro";
 import Education from "../components/sections/Education.astro";
-import Community from "../components/sections/Community.astro";
 import Contact from "../components/sections/Contact.astro";
 ---
 
@@ -35,7 +34,7 @@ import Contact from "../components/sections/Contact.astro";
    <ImmersiveExperiences />
 
    <!-- Contribuciones Frontend -->
-   <FrontendContributions />
+   <Community_Contributions />
 
    <!-- Herramientas de Gestión -->
    <ToolsCarousel />
@@ -45,9 +44,6 @@ import Contact from "../components/sections/Contact.astro";
 
    <!-- Educación -->
    <Education />
-
-   <!-- Comunidad -->
-   <Community />
 
    <!-- Contacto -->
    <Contact />
